--- a/Modules/Backend/Resources/assets/src/common/style.scss
+++ b/Modules/Backend/Resources/assets/src/common/style.scss
@@ -8,3 +8,23 @@
   //border-top-color: #dd4b39;
   //border-left-color: #dd4b39;
 }
+
+.table_info_w{
+    display: flex;
+    align-items:center;
+
+    .dataTables_info{
+        padding:0 !important;
+    }
+    .dataTables_length{
+        margin-left:15px;
+        &>label{
+            margin:0;
+            display: flex;
+            align-items:center;
+            select{
+                margin: 0 5px;
+            }
+        }
+    }
+}
